parser.output
Terminais sem uso na gramática

    VAR


Gramática

    0 $accept: program $end

    1 program: ε
    2        | program statement

    3 statement: simple_stmt SEMI
    4          | block SEMI
    5          | SEMI

    6 simple_stmt: assignment
    7            | log_stmt
    8            | while_stmt
    9            | if_stmt
   10            | sessao_stmt
   11            | etapa_stmt
   12            | descanso_stmt
   13            | saque_stmt
   14            | rally_stmt
   15            | start_stmt
   16            | point_stmt
   17            | ace_stmt
   18            | fault_stmt
   19            | doublefault_stmt
   20            | score_stmt
   21            | rename_stmt
   22            | config_stmt

   23 block: LBRACE stmts RBRACE

   24 stmts: ε
   25      | stmts statement

   26 assignment: IDENT ASSIGN bool_expr

   27 log_stmt: LOG LPAREN bool_expr RPAREN

   28 while_stmt: WHILE LPAREN bool_expr RPAREN statement

   29 if_stmt: IF LPAREN bool_expr RPAREN statement
   30        | IF LPAREN bool_expr RPAREN statement ELSE statement

   31 sessao_stmt: SESSAO LPAREN STRING RPAREN block

   32 etapa_stmt: ETAPA LPAREN STRING COMMA IDENT ASSIGN expression RPAREN

   33 descanso_stmt: DESCANSO LPAREN expression RPAREN

   34 saque_stmt: SAQUE LPAREN player COMMA STRING RPAREN

   35 rally_stmt: RALLY LPAREN expression RPAREN

   36 start_stmt: START LPAREN expression COMMA expression RPAREN

   37 point_stmt: POINT LPAREN player RPAREN

   38 ace_stmt: ACE LPAREN player RPAREN

   39 fault_stmt: FAULT LPAREN player RPAREN

   40 doublefault_stmt: DOUBLEFAULT LPAREN player RPAREN

   41 score_stmt: SCORE LPAREN RPAREN

   42 rename_stmt: RENAME LPAREN player COMMA STRING RPAREN

   43 config_stmt: CONFIG LPAREN cfgkey ASSIGN bool_expr RPAREN

   44 cfgkey: NO_AD
   45       | SHOT_CLOCK

   46 player: PLAYER_A
   47       | PLAYER_B

   48 bool_expr: bool_term
   49          | bool_expr OR bool_term

   50 bool_term: rel_expr
   51          | bool_term AND rel_expr

   52 rel_expr: expression
   53         | rel_expr EQ3 expression
   54         | rel_expr GT expression
   55         | rel_expr LT expression

   56 expression: term
   57           | expression PLUS term
   58           | expression MINUS term

   59 term: factor
   60     | term TIMES factor
   61     | term DIV factor

   62 factor: NUMBER
   63       | TRUE
   64       | FALSE
   65       | IDENT
   66       | READLINE LPAREN RPAREN
   67       | LPAREN bool_expr RPAREN
   68       | PLUS factor
   69       | MINUS factor
   70       | NOT factor


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    VAR (258)
    IF (259) 29 30
    ELSE (260) 30
    WHILE (261) 28
    LOG (262) 27
    SESSAO (263) 31
    ETAPA (264) 32
    DESCANSO (265) 33
    SAQUE (266) 34
    RALLY (267) 35
    START (268) 36
    POINT (269) 37
    ACE (270) 38
    FAULT (271) 39
    DOUBLEFAULT (272) 40
    SCORE (273) 41
    RENAME (274) 42
    CONFIG (275) 43
    NO_AD (276) 44
    SHOT_CLOCK (277) 45
    PLAYER_A (278) 46
    PLAYER_B (279) 47
    TRUE (280) 63
    FALSE (281) 64
    READLINE (282) 66
    IDENT <sval> (283) 26 32 65
    STRING <sval> (284) 31 32 34 42
    NUMBER <ival> (285) 62
    OR (286) 49
    AND (287) 51
    EQ3 (288) 53
    LT (289) 55
    GT (290) 54
    PLUS (291) 57 68
    MINUS (292) 58 69
    TIMES (293) 60
    DIV (294) 61
    NOT (295) 70
    ASSIGN (296) 26 32 43
    LPAREN (297) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 66 67
    RPAREN (298) 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 66 67
    LBRACE (299) 23
    RBRACE (300) 23
    COMMA (301) 32 34 36 42
    SEMI (302) 3 4 5


Não terminais com as regras onde eles aparecem

    $accept (48)
        à esquerda: 0
    program (49)
        à esquerda: 1 2
        à direita: 0 2
    statement (50)
        à esquerda: 3 4 5
        à direita: 2 25 28 29 30
    simple_stmt (51)
        à esquerda: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
        à direita: 3
    block (52)
        à esquerda: 23
        à direita: 4 31
    stmts (53)
        à esquerda: 24 25
        à direita: 23 25
    assignment (54)
        à esquerda: 26
        à direita: 6
    log_stmt (55)
        à esquerda: 27
        à direita: 7
    while_stmt (56)
        à esquerda: 28
        à direita: 8
    if_stmt (57)
        à esquerda: 29 30
        à direita: 9
    sessao_stmt (58)
        à esquerda: 31
        à direita: 10
    etapa_stmt (59)
        à esquerda: 32
        à direita: 11
    descanso_stmt (60)
        à esquerda: 33
        à direita: 12
    saque_stmt (61)
        à esquerda: 34
        à direita: 13
    rally_stmt (62)
        à esquerda: 35
        à direita: 14
    start_stmt (63)
        à esquerda: 36
        à direita: 15
    point_stmt (64)
        à esquerda: 37
        à direita: 16
    ace_stmt (65)
        à esquerda: 38
        à direita: 17
    fault_stmt (66)
        à esquerda: 39
        à direita: 18
    doublefault_stmt (67)
        à esquerda: 40
        à direita: 19
    score_stmt (68)
        à esquerda: 41
        à direita: 20
    rename_stmt (69)
        à esquerda: 42
        à direita: 21
    config_stmt (70)
        à esquerda: 43
        à direita: 22
    cfgkey (71)
        à esquerda: 44 45
        à direita: 43
    player (72)
        à esquerda: 46 47
        à direita: 34 37 38 39 40 42
    bool_expr (73)
        à esquerda: 48 49
        à direita: 26 27 28 29 30 43 49 67
    bool_term (74)
        à esquerda: 50 51
        à direita: 48 49 51
    rel_expr (75)
        à esquerda: 52 53 54 55
        à direita: 50 51 53 54 55
    expression (76)
        à esquerda: 56 57 58
        à direita: 32 33 35 36 52 53 54 55 57 58
    term (77)
        à esquerda: 59 60 61
        à direita: 56 57 58 60 61
    factor (78)
        à esquerda: 62 63 64 65 66 67 68 69 70
        à direita: 59 60 61 68 69 70


Estado 0

    0 $accept: • program $end

    $padrão  reduzir usando a regra 1 (program)

    program  ir ao estado 1


Estado 1

    0 $accept: program • $end
    2 program: program • statement

    $end         deslocar, e ir ao estado 2
    IF           deslocar, e ir ao estado 3
    WHILE        deslocar, e ir ao estado 4
    LOG          deslocar, e ir ao estado 5
    SESSAO       deslocar, e ir ao estado 6
    ETAPA        deslocar, e ir ao estado 7
    DESCANSO     deslocar, e ir ao estado 8
    SAQUE        deslocar, e ir ao estado 9
    RALLY        deslocar, e ir ao estado 10
    START        deslocar, e ir ao estado 11
    POINT        deslocar, e ir ao estado 12
    ACE          deslocar, e ir ao estado 13
    FAULT        deslocar, e ir ao estado 14
    DOUBLEFAULT  deslocar, e ir ao estado 15
    SCORE        deslocar, e ir ao estado 16
    RENAME       deslocar, e ir ao estado 17
    CONFIG       deslocar, e ir ao estado 18
    IDENT        deslocar, e ir ao estado 19
    LBRACE       deslocar, e ir ao estado 20
    SEMI         deslocar, e ir ao estado 21

    statement         ir ao estado 22
    simple_stmt       ir ao estado 23
    block             ir ao estado 24
    assignment        ir ao estado 25
    log_stmt          ir ao estado 26
    while_stmt        ir ao estado 27
    if_stmt           ir ao estado 28
    sessao_stmt       ir ao estado 29
    etapa_stmt        ir ao estado 30
    descanso_stmt     ir ao estado 31
    saque_stmt        ir ao estado 32
    rally_stmt        ir ao estado 33
    start_stmt        ir ao estado 34
    point_stmt        ir ao estado 35
    ace_stmt          ir ao estado 36
    fault_stmt        ir ao estado 37
    doublefault_stmt  ir ao estado 38
    score_stmt        ir ao estado 39
    rename_stmt       ir ao estado 40
    config_stmt       ir ao estado 41


Estado 2

    0 $accept: program $end •

    $padrão  aceitar


Estado 3

   29 if_stmt: IF • LPAREN bool_expr RPAREN statement
   30        | IF • LPAREN bool_expr RPAREN statement ELSE statement

    LPAREN  deslocar, e ir ao estado 42


Estado 4

   28 while_stmt: WHILE • LPAREN bool_expr RPAREN statement

    LPAREN  deslocar, e ir ao estado 43


Estado 5

   27 log_stmt: LOG • LPAREN bool_expr RPAREN

    LPAREN  deslocar, e ir ao estado 44


Estado 6

   31 sessao_stmt: SESSAO • LPAREN STRING RPAREN block

    LPAREN  deslocar, e ir ao estado 45


Estado 7

   32 etapa_stmt: ETAPA • LPAREN STRING COMMA IDENT ASSIGN expression RPAREN

    LPAREN  deslocar, e ir ao estado 46


Estado 8

   33 descanso_stmt: DESCANSO • LPAREN expression RPAREN

    LPAREN  deslocar, e ir ao estado 47


Estado 9

   34 saque_stmt: SAQUE • LPAREN player COMMA STRING RPAREN

    LPAREN  deslocar, e ir ao estado 48


Estado 10

   35 rally_stmt: RALLY • LPAREN expression RPAREN

    LPAREN  deslocar, e ir ao estado 49


Estado 11

   36 start_stmt: START • LPAREN expression COMMA expression RPAREN

    LPAREN  deslocar, e ir ao estado 50


Estado 12

   37 point_stmt: POINT • LPAREN player RPAREN

    LPAREN  deslocar, e ir ao estado 51


Estado 13

   38 ace_stmt: ACE • LPAREN player RPAREN

    LPAREN  deslocar, e ir ao estado 52


Estado 14

   39 fault_stmt: FAULT • LPAREN player RPAREN

    LPAREN  deslocar, e ir ao estado 53


Estado 15

   40 doublefault_stmt: DOUBLEFAULT • LPAREN player RPAREN

    LPAREN  deslocar, e ir ao estado 54


Estado 16

   41 score_stmt: SCORE • LPAREN RPAREN

    LPAREN  deslocar, e ir ao estado 55


Estado 17

   42 rename_stmt: RENAME • LPAREN player COMMA STRING RPAREN

    LPAREN  deslocar, e ir ao estado 56


Estado 18

   43 config_stmt: CONFIG • LPAREN cfgkey ASSIGN bool_expr RPAREN

    LPAREN  deslocar, e ir ao estado 57


Estado 19

   26 assignment: IDENT • ASSIGN bool_expr

    ASSIGN  deslocar, e ir ao estado 58


Estado 20

   23 block: LBRACE • stmts RBRACE

    $padrão  reduzir usando a regra 24 (stmts)

    stmts  ir ao estado 59


Estado 21

    5 statement: SEMI •

    $padrão  reduzir usando a regra 5 (statement)


Estado 22

    2 program: program statement •

    $padrão  reduzir usando a regra 2 (program)


Estado 23

    3 statement: simple_stmt • SEMI

    SEMI  deslocar, e ir ao estado 60


Estado 24

    4 statement: block • SEMI

    SEMI  deslocar, e ir ao estado 61


Estado 25

    6 simple_stmt: assignment •

    $padrão  reduzir usando a regra 6 (simple_stmt)


Estado 26

    7 simple_stmt: log_stmt •

    $padrão  reduzir usando a regra 7 (simple_stmt)


Estado 27

    8 simple_stmt: while_stmt •

    $padrão  reduzir usando a regra 8 (simple_stmt)


Estado 28

    9 simple_stmt: if_stmt •

    $padrão  reduzir usando a regra 9 (simple_stmt)


Estado 29

   10 simple_stmt: sessao_stmt •

    $padrão  reduzir usando a regra 10 (simple_stmt)


Estado 30

   11 simple_stmt: etapa_stmt •

    $padrão  reduzir usando a regra 11 (simple_stmt)


Estado 31

   12 simple_stmt: descanso_stmt •

    $padrão  reduzir usando a regra 12 (simple_stmt)


Estado 32

   13 simple_stmt: saque_stmt •

    $padrão  reduzir usando a regra 13 (simple_stmt)


Estado 33

   14 simple_stmt: rally_stmt •

    $padrão  reduzir usando a regra 14 (simple_stmt)


Estado 34

   15 simple_stmt: start_stmt •

    $padrão  reduzir usando a regra 15 (simple_stmt)


Estado 35

   16 simple_stmt: point_stmt •

    $padrão  reduzir usando a regra 16 (simple_stmt)


Estado 36

   17 simple_stmt: ace_stmt •

    $padrão  reduzir usando a regra 17 (simple_stmt)


Estado 37

   18 simple_stmt: fault_stmt •

    $padrão  reduzir usando a regra 18 (simple_stmt)


Estado 38

   19 simple_stmt: doublefault_stmt •

    $padrão  reduzir usando a regra 19 (simple_stmt)


Estado 39

   20 simple_stmt: score_stmt •

    $padrão  reduzir usando a regra 20 (simple_stmt)


Estado 40

   21 simple_stmt: rename_stmt •

    $padrão  reduzir usando a regra 21 (simple_stmt)


Estado 41

   22 simple_stmt: config_stmt •

    $padrão  reduzir usando a regra 22 (simple_stmt)


Estado 42

   29 if_stmt: IF LPAREN • bool_expr RPAREN statement
   30        | IF LPAREN • bool_expr RPAREN statement ELSE statement

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    bool_expr   ir ao estado 71
    bool_term   ir ao estado 72
    rel_expr    ir ao estado 73
    expression  ir ao estado 74
    term        ir ao estado 75
    factor      ir ao estado 76


Estado 43

   28 while_stmt: WHILE LPAREN • bool_expr RPAREN statement

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    bool_expr   ir ao estado 77
    bool_term   ir ao estado 72
    rel_expr    ir ao estado 73
    expression  ir ao estado 74
    term        ir ao estado 75
    factor      ir ao estado 76


Estado 44

   27 log_stmt: LOG LPAREN • bool_expr RPAREN

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    bool_expr   ir ao estado 78
    bool_term   ir ao estado 72
    rel_expr    ir ao estado 73
    expression  ir ao estado 74
    term        ir ao estado 75
    factor      ir ao estado 76


Estado 45

   31 sessao_stmt: SESSAO LPAREN • STRING RPAREN block

    STRING  deslocar, e ir ao estado 79


Estado 46

   32 etapa_stmt: ETAPA LPAREN • STRING COMMA IDENT ASSIGN expression RPAREN

    STRING  deslocar, e ir ao estado 80


Estado 47

   33 descanso_stmt: DESCANSO LPAREN • expression RPAREN

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    expression  ir ao estado 81
    term        ir ao estado 75
    factor      ir ao estado 76


Estado 48

   34 saque_stmt: SAQUE LPAREN • player COMMA STRING RPAREN

    PLAYER_A  deslocar, e ir ao estado 82
    PLAYER_B  deslocar, e ir ao estado 83

    player  ir ao estado 84


Estado 49

   35 rally_stmt: RALLY LPAREN • expression RPAREN

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    expression  ir ao estado 85
    term        ir ao estado 75
    factor      ir ao estado 76


Estado 50

   36 start_stmt: START LPAREN • expression COMMA expression RPAREN

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    expression  ir ao estado 86
    term        ir ao estado 75
    factor      ir ao estado 76


Estado 51

   37 point_stmt: POINT LPAREN • player RPAREN

    PLAYER_A  deslocar, e ir ao estado 82
    PLAYER_B  deslocar, e ir ao estado 83

    player  ir ao estado 87


Estado 52

   38 ace_stmt: ACE LPAREN • player RPAREN

    PLAYER_A  deslocar, e ir ao estado 82
    PLAYER_B  deslocar, e ir ao estado 83

    player  ir ao estado 88


Estado 53

   39 fault_stmt: FAULT LPAREN • player RPAREN

    PLAYER_A  deslocar, e ir ao estado 82
    PLAYER_B  deslocar, e ir ao estado 83

    player  ir ao estado 89


Estado 54

   40 doublefault_stmt: DOUBLEFAULT LPAREN • player RPAREN

    PLAYER_A  deslocar, e ir ao estado 82
    PLAYER_B  deslocar, e ir ao estado 83

    player  ir ao estado 90


Estado 55

   41 score_stmt: SCORE LPAREN • RPAREN

    RPAREN  deslocar, e ir ao estado 91


Estado 56

   42 rename_stmt: RENAME LPAREN • player COMMA STRING RPAREN

    PLAYER_A  deslocar, e ir ao estado 82
    PLAYER_B  deslocar, e ir ao estado 83

    player  ir ao estado 92


Estado 57

   43 config_stmt: CONFIG LPAREN • cfgkey ASSIGN bool_expr RPAREN

    NO_AD       deslocar, e ir ao estado 93
    SHOT_CLOCK  deslocar, e ir ao estado 94

    cfgkey  ir ao estado 95


Estado 58

   26 assignment: IDENT ASSIGN • bool_expr

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    bool_expr   ir ao estado 96
    bool_term   ir ao estado 72
    rel_expr    ir ao estado 73
    expression  ir ao estado 74
    term        ir ao estado 75
    factor      ir ao estado 76


Estado 59

   23 block: LBRACE stmts • RBRACE
   25 stmts: stmts • statement

    IF           deslocar, e ir ao estado 3
    WHILE        deslocar, e ir ao estado 4
    LOG          deslocar, e ir ao estado 5
    SESSAO       deslocar, e ir ao estado 6
    ETAPA        deslocar, e ir ao estado 7
    DESCANSO     deslocar, e ir ao estado 8
    SAQUE        deslocar, e ir ao estado 9
    RALLY        deslocar, e ir ao estado 10
    START        deslocar, e ir ao estado 11
    POINT        deslocar, e ir ao estado 12
    ACE          deslocar, e ir ao estado 13
    FAULT        deslocar, e ir ao estado 14
    DOUBLEFAULT  deslocar, e ir ao estado 15
    SCORE        deslocar, e ir ao estado 16
    RENAME       deslocar, e ir ao estado 17
    CONFIG       deslocar, e ir ao estado 18
    IDENT        deslocar, e ir ao estado 19
    LBRACE       deslocar, e ir ao estado 20
    RBRACE       deslocar, e ir ao estado 97
    SEMI         deslocar, e ir ao estado 21

    statement         ir ao estado 98
    simple_stmt       ir ao estado 23
    block             ir ao estado 24
    assignment        ir ao estado 25
    log_stmt          ir ao estado 26
    while_stmt        ir ao estado 27
    if_stmt           ir ao estado 28
    sessao_stmt       ir ao estado 29
    etapa_stmt        ir ao estado 30
    descanso_stmt     ir ao estado 31
    saque_stmt        ir ao estado 32
    rally_stmt        ir ao estado 33
    start_stmt        ir ao estado 34
    point_stmt        ir ao estado 35
    ace_stmt          ir ao estado 36
    fault_stmt        ir ao estado 37
    doublefault_stmt  ir ao estado 38
    score_stmt        ir ao estado 39
    rename_stmt       ir ao estado 40
    config_stmt       ir ao estado 41


Estado 60

    3 statement: simple_stmt SEMI •

    $padrão  reduzir usando a regra 3 (statement)


Estado 61

    4 statement: block SEMI •

    $padrão  reduzir usando a regra 4 (statement)


Estado 62

   63 factor: TRUE •

    $padrão  reduzir usando a regra 63 (factor)


Estado 63

   64 factor: FALSE •

    $padrão  reduzir usando a regra 64 (factor)


Estado 64

   66 factor: READLINE • LPAREN RPAREN

    LPAREN  deslocar, e ir ao estado 99


Estado 65

   65 factor: IDENT •

    $padrão  reduzir usando a regra 65 (factor)


Estado 66

   62 factor: NUMBER •

    $padrão  reduzir usando a regra 62 (factor)


Estado 67

   68 factor: PLUS • factor

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    factor  ir ao estado 100


Estado 68

   69 factor: MINUS • factor

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    factor  ir ao estado 101


Estado 69

   70 factor: NOT • factor

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    factor  ir ao estado 102


Estado 70

   67 factor: LPAREN • bool_expr RPAREN

    TRUE      deslocar, e ir ao estado 62
    FALSE     deslocar, e ir ao estado 63
    READLINE  deslocar, e ir ao estado 64
    IDENT     deslocar, e ir ao estado 65
    NUMBER    deslocar, e ir ao estado 66
    PLUS      deslocar, e ir ao estado 67
    MINUS     deslocar, e ir ao estado 68
    NOT       deslocar, e ir ao estado 69
    LPAREN    deslocar, e ir ao estado 70

    bool_expr   ir ao estado 103
    bool_term   ir ao estado 72
    rel_expr    ir ao estado 73
    expression  ir ao estado 74
    term        ir ao estado 75
    factor      ir ao estado 76


Estado 71

   29 if_stmt: IF LPAREN bool_expr • RPAREN statement
   30        | IF LPAREN bool_expr • RPAREN statement ELSE statement
   49 bool_expr: bool_expr • OR bool_term

    OR      deslocar, e ir ao estado 104
    RPAREN  deslocar, e ir ao estado 105


Estado 72

   48 bool_expr: bool_term •
   51 bool_term: bool_term • AND rel_expr

    AND  deslocar, e ir ao estado 106

    $padrão  reduzir usando a regra 48 (bool_expr)


Estado 73

   50 bool_term: rel_expr •
   53 rel_expr: rel_expr • EQ3 expression
   54         | rel_expr • GT expression
   55         | rel_expr • LT expression

    EQ3  deslocar, e ir ao estado 107
    LT   deslocar, e ir ao estado 108
    GT   deslocar, e ir ao estado 109

    $padrão  reduzir usando a regra 50 (bool_term)


Estado 74

   52 rel_expr: expression •
   57 expression: expression • PLUS term
   58           | expression • MINUS term

    PLUS   deslocar, e ir ao estado 110
    MINUS  deslocar, e ir ao estado 111

    $padrão  reduzir usando a regra 52 (rel_expr)


Estado 75

   56 expression: term •
   60 term: term • TIMES factor
   61     | term • DIV factor

    TIMES  deslocar, e ir ao estado 112
    DIV    deslocar, e ir ao estado 113

    $padrão  reduzir usando a regra 56 (expression)


Estado 76

   59 term: factor •

    $padrão  reduzir usando a regra 59 (term)


Estado 77

   28 while_stmt: WHILE LPAREN bool_expr • RPAREN statement
   49 bool_expr: bool_expr • OR bool_term

    OR      deslocar, e ir ao estado 104
    RPAREN  deslocar, e ir ao estado 114


Estado 78

   27 log_stmt: LOG LPAREN bool_expr • RPAREN
   49 bool_expr: bool_expr • OR bool_term

    OR      deslocar, e ir ao estado 104
    RPAREN  deslocar, e ir ao estado 115


Estado 79

   31 sessao_stmt: SESSAO LPAREN STRING • RPAREN block

    RPAREN  deslocar, e ir ao estado 116


Estado 80

   32 etapa_stmt: ETAPA LPAREN STRING • COMMA IDENT ASSIGN expression RPAREN

    COMMA  deslocar, e ir ao estado 117


Estado 81

   33 descanso_stmt: DESCANSO LPAREN expression • RPAREN
   57 expression: expression • PLUS term
   58           | expression • MINUS term

    PLUS    deslocar, e ir ao estado 110
    MINUS   deslocar, e ir ao estado 111
    RPAREN  deslocar, e ir ao estado 118


Estado 82

   46 player: PLAYER_A •

    $padrão  reduzir usando a regra 46 (player)


Estado 83

   47 player: PLAYER_B •

    $padrão  reduzir usando a regra 47 (player)


Estado 84

   34 saque_stmt: SAQUE LPAREN player • COMMA STRING RPAREN

    COMMA  deslocar, e ir ao estado 119


Estado 85

   35 rally_stmt: RALLY LPAREN expression • RPAREN
   57 expression: expression • PLUS term
   58           | expression • MINUS term

    PLUS    deslocar, e ir ao estado 110
    MINUS   deslocar, e ir ao estado 111
    RPAREN  deslocar, e ir ao estado 120


Estado 86

   36 start_stmt: START LPAREN expression • COMMA expression RPAREN
   57 expression: expression • PLUS term
   58           | expression • MINUS term

    PLUS   deslocar, e ir ao estado 110
    MINUS  deslocar, e ir ao estado 111
    COMMA  deslocar, e ir ao estado 121


Estado 87

   37 point_stmt: POINT LPAREN player • RPAREN

    RPAREN  deslocar, e ir ao estado 122


Estado 88

   38 ace_stmt: ACE LPAREN player • RPAREN

    RPAREN  deslocar, e ir ao estado 123


Estado 89

   39 fault_stmt: FAULT LPAREN player • RPAREN

    RPAREN  deslocar, e ir ao estado 124


Estado 90

   40 doublefault_stmt: DOUBLEFAULT LPAREN player • RPAREN

    RPAREN  deslocar, e ir ao estado 125


Estado 91

   41 score_stmt: SCORE LPAREN RPAREN •

    $padrão  reduzir usando a regra 41 (score_stmt)


Estado 92

   42 rename_stmt: RENAME LPAREN player • COMMA STRING RPAREN

    COMMA  deslocar, e ir ao estado 126


Estado 93

   44 cfgkey: NO_AD •

    $padrão  reduzir usando a regra 44 (cfgkey)


Estado 94

   45 cfgkey: SHOT_CLOCK •

    $padrão  reduzir usando a regra 45 (cfgkey)


Estado 95

   43 config_stmt: CONFIG LPAREN cfgkey • ASSIGN bool_expr RPAREN

    ASSIGN  deslocar, e ir ao estado 127


Estado 96

   26 assignment: IDENT ASSIGN bool_expr •
   49 bool_expr: bool_expr • OR bool_term

    OR  deslocar, e ir ao estado 104

    $padrão  reduzir usando a regra 26 (assignment)


Estado 97

   23 block: LBRACE stmts RBRACE •

    $padrão  reduzir usando a regra 23 (block)


Estado 98

   25 stmts: stmts statement •

    $padrão  reduzir usando a regra 25 (stmts)


Estado 99

   66 factor: READLINE LPAREN • RPAREN

    RPAREN  deslocar, e ir ao estado 128


Estado 100

   68 factor: PLUS factor •

    $padrão  reduzir usando a regra 68 (factor)


Estado 101

   69 factor: MINUS factor •

    $padrão  reduzir usando a regra 69 (factor)


Estado 102

   70 factor: NOT factor •

    $padrão  reduzir usando a regra 70 (factor)


Estado 103

   49 bool_expr: bool_expr • OR bool_term
   67 factor: LPAREN bool_expr • RPAREN

    OR      deslocar, e ir ao estado 104
    RPAREN  deslocar, e ir ao estado 129


Estado 104

   49 bool_expr: bool_expr OR • bool_term
